# min-qiskit-cpp-example

./: .gitignore  CMakeLists.txt  README.md
src/: bell_state_c.c  ghz_20q.cpp  main.cpp
